--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -39,7 +39,7 @@ body {
   left: 0;
 }
 
-html /deep/ core-icon {
+html core-icon {
   display: inline-block;
   vertical-align: middle;
   background-repeat: no-repeat;
